--- a/templates/index.html
+++ b/templates/index.html
@@ -1,80 +1,42 @@
-<!DOCTYPE html>
-
-<html>
-    <head>
-
-        <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta -->
-        <meta charset="utf-8"/>
-        <meta content="initial-scale=1, width=device-width" name="viewport"/>
-
-        <!-- http://getbootstrap.com/ -->
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
-
-        <!-- App's own CSS -->
-        <link href="/static/styles.css" rel="stylesheet"/>
-
-        <!-- http://jquery.com/ -->
-        <script src="https://code.jquery.com/jquery-latest.min.js"></script>
-
-        <!-- http://getbootstrap.com/ -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-        <!-- app's own JavaScript -->
-        <script src="/static/scripts.js"></script>
-
-        <title>Blood Connect</title>
-
-    </head>
-    <body>
-
-       <nav class="navbar navbar-inverse">
-          <div class="container-fluid">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="#">Blood Connect</a>
+{% extends "layout.html" %}
+{% block main %}
+    <h1>Welcome</h1>
+    {% for message in messages %}
+        <div class="panel panel-default" id="{{message.messageId}}">
+            <div class="panel-heading">
+                {{message.title}} for
+                {% if message.a_pos%}
+                <span class="badge">A+</span>
+                {% endif %}
+                {% if message.a_neg%}
+                <span class="badge">A-</span>
+                {% endif %}
+                {% if message.b_pos%}
+                <span class="badge">B+</span>
+                {% endif %}
+                {% if message.b_neg%}
+                <span class="badge">B-</span>
+                {% endif %}
+                {% if message.o_pos%}
+                <span class="badge">O+</span>
+                {% endif %}
+                {% if message.o_neg%}
+                <span class="badge">O-</span>
+                {% endif %}
+                {% if message.ab_pos%}
+                <span class="badge">AB+</span>
+                {% endif %}
+                {% if message.ab_neg%}
+                <span class="badge">AB-</span>
+                {% endif %}
             </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-              <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Register Donor</a></li>
-                <li><a href="#">Register Hospital</a></li>
-                <li><a href="#">Notify Donors</a></li>
-                <li><a href="#">Find hospitals in need</a></li>
-              </ul>
-              <!--<ul class="nav navbar-nav navbar-right">-->
-              <!--  <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>-->
-              <!--</ul>-->
+            <div class="panel-body">{{message.message}}</div>
+            <div class="panel-footer">
+                <span>Requested by {{message.name}} ({{message.email}}) on {{message.messageCreated}}</span>
+                {% if message.profileId == session.profile.id%}
+                <button class="btn btn-danger btn-sm" onclick=archiveMessage('{{message.messageId}}')>Archive</button>
+                {% endif %}
             </div>
-          </div>
-        </nav>
-
-        <div class="container text-center main">
-          <div class="row content">
-            <!--<div class="col-sm-2 sidenav">-->
-            <!--  <p><a href="#">Link</a></p>-->
-            <!--  <p><a href="#">Link</a></p>-->
-            <!--  <p><a href="#">Link</a></p>-->
-            <!--</div>-->
-            <div class="col-sm-8 text-left">
-              <h1>Welcome</h1>
-            </div>
-            <!--<div class="col-sm-2 sidenav">-->
-            <!--  <div class="well">-->
-            <!--    <p>ADS</p>-->
-            <!--  </div>-->
-            <!--  <div class="well">-->
-            <!--    <p>ADS</p>-->
-            <!--  </div>-->
-            <!--</div>-->
-          </div>
         </div>
-
-        <!--<footer class="container-fluid text-center">-->
-        <!--  <p>Footer Text</p>-->
-        <!--</footer>-->
-    </body>
-</html>
+    {% endfor %}
+{% endblock %}
